<resources>
    <string name="app_name">TestApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Sound Recorder</string>
    <string name="menu_gallery">Counter</string>
    <string name="menu_slideshow">Room</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="play_sound">Play sound</string>
    <string name="stop_sound">Stop sound</string>
    <string name="add">add</string>
    <string name="set_json">set json</string>
    <string name="get_json">get json</string>
</resources>